--- a/server.cfg
+++ b/server.cfg
@@ -1,12 +1,15 @@
 # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#    ___ _____  __  _    ___ ___   _   _____   __   #
-#   | __/ __\ \/ / | |  | __/ __| /_\ / __\ \ / /   #
-#   | _|\__ \>  <  | |__| _| (_ |/ _ \ (__ \ V /    #
-#   |___|___/_/\_\ |____|___\___/_/ \_\___| |_|     #
 #                                                   #
-#     Discord: https://discord.esx-framework.org/   #
-#     Website: https://esx-framework.org/           #
-#     CFG Docs: https://aka.cfx.re/server-commands  #
+#    ███████╗███████╗██╗  ██╗      ██████╗ ██╗  ██╗ #
+#    ██╔════╝██╔════╝╚██╗██╔╝     ██╔═══██╗╚██╗██╔╝ #
+#    █████╗  ███████╗ ╚███╔╝█████╗██║   ██║ ╚███╔╝  #
+#    ██╔══╝  ╚════██║ ██╔██╗╚════╝██║   ██║ ██╔██╗  #
+#    ███████╗███████║██╔╝ ██╗     ╚██████╔╝██╔╝ ██╗ #
+#    ╚══════╝╚══════╝╚═╝  ╚═╝      ╚═════╝ ╚═╝  ╚═╝ #
+#     Discord: https://discord.gg/B87SzPkMUE        #
+#     Website: In construction                      #
+#     By: Enjoy_it#9628                             #
+#                                                   #
 # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
 
@@ -24,13 +27,13 @@ sets tags "default, esx, esx legacy, official, roleplay"
 # --------------------------
 # You may edit the following:
 
-sv_licenseKey "cfxk_bS5HUwMF7waDvMIu2QGh_4O2das"
-sv_hostname "NEWSITE | ESX Legacy Server"
-sets sv_projectName " NEWSITE | [ESX Legacy]"
-sets sv_projectDesc "The official recipe of the most popular FiveM RP framework, containing Jobs, Housing, Vehicles & more!"
-set mysql_connection_string "mysql://root:Quillote@localhost/NEWSITE?charset=utf8mb4"
-load_server_icon esxLogo.png
-sv_maxclients 48
+sv_licenseKey "{{svLicense}}"
+sv_hostname "{{serverName}} | ESX Legacy Server"
+sets sv_projectName " {{serverName}} | [{{recipeName}}]"
+sets sv_projectDesc "{{recipeDescription}}"
+set mysql_connection_string "{{dbConnectionString}}"
+load_server_icon newsiteLogo.png
+sv_maxclients {{maxClients}}
 sets locale "es-ES" 
 sv_enforceGameBuild 3258
 set resources_useSystemChat true
